# Lophura

./: CMakeLists.txt  Lophura.sln
Lophura/: AsynRender.cpp  AsynRender.h  DataBuffer.cpp  DataBuffer.h  Format.h  Lophura.h  Lophura.vcxproj  Lophura.vcxproj.filters  Mesh.cpp  Mesh.h  MeshImple.cpp  MeshImple.h  NativeWindow.cpp  NativeWindow.h  PipeLine.cpp  PipeLine.h  PipeLineImple.cpp  PipeLineImple.h  Render.cpp  Render.h  RenderCore.cpp  RenderCore.h  RenderImple.cpp  RenderImple.h  RenderState.h  SwapChain.cpp  SwapChain.h  SynRender.cpp  SynRender.h  TestMain.cpp  ViewPort.h  Window.cpp  Window.h  color.h  constant.h  math.cpp  math.h  vector.h
lophura/: CMakeLists.txt
lophura/include/: asyn_render.h  colors.h  data_addressing.h  data_buffer.h  format.h  framebuffer.h  index_fetcher.h  lophura_capacity.h  lophura_declaration.h  lophura_define.h  lophura_forward.h  mesh.h  mesh_imple.h  pipeline.h  raster_state.h  rasterizer.h  render.h  render_core.h  render_imple.h  render_stages.h  render_state.h  shader.h  shader_regs.h  stream_assembler.h  surface.h  swap_chain.h  syn_render.h  viewport.h  voidptr.h
lophura/include/render_state/: input_assembly_state.h  input_layout.h  render_state.h
lophura/src/: asyn_render.cpp  data_addressing.cpp  data_buffer.cpp  framebuffer.cpp  index_fetcher.cpp  mesh.cpp  mesh_imple.cpp  pipeline.cpp  rasterizer.cpp  render_core.cpp  render_imple.cpp  shader.cpp  stream_assembler.cpp  surface.cpp  swap_chain.cpp  syn_render.cpp  voidptr.cpp
lophura/src/render_state/: input_assembly_state.cpp  input_layout.cpp
lophura_base/: CMakeLists.txt  lophura_base.vcxproj  lophura_base.vcxproj.filters
lophura_base/include/math/: math.cpp  math.h  matrix.h  matrix_imple.h  vector.h  vector_imple.h
lophura_base/include/memory/: bounded_buffer.h
lophura_base/include/platform/: constant.h  typedefs.h
lophura_base/include/utility/: shared_declaration.h
lophura_base/src/: math.cpp
sample_app/: NativeWindow.cpp  Window.cpp  Window.h  sample_app.vcxproj  sample_app.vcxproj.filters
samples/: CMakeLists.txt
samples/colorized_triangle/: CMakeLists.txt
samples/colorized_triangle/src/: colorized_triangle.cpp
samples/sample_app/: CMakeLists.txt
samples/sample_app/include/: native_window.h
samples/sample_app/include/window/: ms_window.h  native_window.h  native_window_declaration.h  window.h
samples/sample_app/src/: native_window.cpp  window.cpp
samples/sample_app/src/window/: ms_window.cpp  native_window.cpp  window.cpp
samples/trangles/: CMakeLists.txt
samples/trangles/src/: trangles.cpp
trangles/: trangles.cpp  trangles.vcxproj  trangles.vcxproj.filters
