PROJECT( lophura )

CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

macro(LOPHURA_CHECK_BUILD_WITH_UNICODE)
	if(LOPHURA_BUILD_WITH_UNICODE)
		ADD_DEFINITIONS(
			-DUNICODE
			-D_UNICODE
		)
	endif ()
endmacro(LOPHURA_CHECK_BUILD_WITH_UNICODE)

option(LOPHURA_BUILD_WITH_UNICODE "Build with unicode(wide-byte) or ansi(multi-byte)." TRUE)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

set( LOPHURA_HOME_DIR ${CMAKE_HOME_DIRECTORY} )

set( LOPHURA_SDL_LIB_DIR ${LOPHURA_HOME_DIR}/3rd/sdl/lib)

set( LOPHURA_LIB_DIR ${LOPHURA_HOME_DIR}/lib)

set( LOPHURA_BIN_DIR ${LOPHURA_HOME_DIR}/bin)

# Add projects
ADD_SUBDIRECTORY( lophura_base )
ADD_SUBDIRECTORY( lophura )
ADD_SUBDIRECTORY( samples )
